--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
       </div>
 
       <div class="col-md-4">
-        <%= yeild :sidebar %>
+        <%= yield :sidebar %>
       </div>
     </div>
   </div>
