Implement show article feature

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -3,25 +3,32 @@
 
 body {
   padding-top: 70px;
-  background: #f5f5f5;
   color: #333;
 }
 
 .article-title, .article-body {
-  padding-left: 0.7em;
+  /*padding-left: 0.7em;*/
 }
 
 .article-title {
   font-weight: bold;
-  font-size: 2.5em;
+  font-size: 1.5em;
   margin-bottom: 0.8em;
 }
 
 .article-body {
-  font-size: 1.5em;
+  font-size: 1em;
 }
 
 #new-article-btn {
   margin-bottom: 10px;
 }
 
+#article-date {
+  margin-bottom: 40px;
+}
+
+.article-detail-title {
+  font-size: 2em;
+  margin-bottom: 40px;
+}
