--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -11,5 +11,8 @@
     <%= @article.body %>
   </div>
 
-  <%= link_to "Edit Article", edit_article_path(@article) %>
+  <hr>
+  <%= link_to "Edit Article", edit_article_path(@article) %> |
+  <%= link_to "Delete Article", article_path(@article), method: :delete,
+              data: {confirm: "Are you sure you want to delete the article?"}%>
 </article>
